# blurhash-pyside

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: _build.yml  ci.yml  draft-release.yml  publish.yml
examples/: pyside2-example.py
scripts/: compile-cpp.py  export_sdist_name.py  validate-version.py
src/: wrapper.cpp
src/blurhash_pyside/: __init__.py  _core.pyi  _wrapper.py
tests/: conftest.py  test_decode.py  test_encode.py
