[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "blurhash-pyside"
version = "0.1.0"
description = ''
readme = "README.md"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "Leo Covarrubias", email = "leo@leocov.com" },
]
keywords = ["pyside2", "pyside6", "burhash"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9.1"
dependencies = [
    "qtpy~=2.4",
]

[project.optional-dependencies]
dev = [
    "pybind11",
    "pytest",
]
pyside6 = [
    "PySide6-Essentials"
]

[project.urls]
Documentation = "https://github.com/Leonardo Covarrubias/blurhash-pyside#readme"
Issues = "https://github.com/Leonardo Covarrubias/blurhash-pyside/issues"
Source = "https://github.com/Leonardo Covarrubias/blurhash-pyside"
Releases = "https://github.com/Leonardo Covarrubias/blurhash-pyside/releases"

# default ---------------------------------------------------------------
[tool.hatch.envs.default]
type = "virtual"
path = ".venv"
features = [
    "dev",
    "pyside6",
]


# default ---------------------------------------------------------------
[tool.hatch.envs.hatch-test]
dev-mode = true
features = [
    "pyside6"
]

# ------------------------------
# pytest -----------------------
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]


# ------------------------------
# scikit -----------------------
[tool.hatch.build.targets.wheel.hooks.scikit-build]
experimental = true

[tool.scikit-build]
cmake.version = ">=3.27"
cmake.build-type = "Release"
wheel.cmake = true
wheel.license-files = ["LICENSE"]
sdist.reproducible = true
sdist.cmake = true


# ------------------------------
# cibuildwheel -----------------------
[tool.cibuildwheel]
build-frontend = "build"
before-build = "rm -rf {packakge}/build"
build = "cp39-* cp310-* cp311-* cp312-*"
# skip platforms
#   pp*         - don't build any PyPy variations
#   win32*      - don't build 32bit windows variations
#   *_i686      - don't build 32bit linux variations
#   *musllinux* - don't build musl linux variations
skip = "pp* *-win32 *_i686 *musllinux*"
test-extras = "dev, pyside6"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.windows]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "12" }

[tool.cibuildwheel.linux]
test-command = "echo Wheel installed, not running tests"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_31"
